# leptos-windowing

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
examples/: Cargo.toml
examples/basic_pagination/: README.md
examples/basic_pagination/src/: main.rs
examples/pagination_basic/: Cargo.toml
examples/pagination_basic/src/: main.rs
examples/pagination_rest_api/: Cargo.toml
examples/pagination_rest_api/src/: loader.rs  main.rs
examples/pagination_rest_api/style/: output.css
examples/pagination_serverfn_sqlx/: Cargo.toml  README.md  tailwind.config.js
examples/pagination_serverfn_sqlx/src/: app.rs  database.rs  loader.rs  main.rs
examples/src/: data.rs
leptos-pagination/: CHANGELOG.md  Cargo.toml  README.md  retag_and_push.sh
leptos-pagination/examples/: Cargo.toml
leptos-pagination/examples/basic/: Cargo.toml
leptos-pagination/examples/basic/src/: main.rs
leptos-pagination/examples/rest_api/: Cargo.toml  README.md
leptos-pagination/examples/rest_api/src/: loader.rs  main.rs  models.rs
leptos-pagination/examples/serverfn_sqlx/: Cargo.toml
leptos-pagination/examples/serverfn_sqlx/.zed/: settings.json
leptos-pagination/examples/serverfn_sqlx/src/: app.rs  lib.rs  loader.rs
leptos-pagination/src/: lib.rs
leptos-pagination/src/components/: controls.rs  paginated_for.rs
leptos-pagination/src/hooks/: controls.rs  mod.rs  pagination.rs
leptos-windowing/: CHANGELOG.md  Cargo.toml  README.md  retag_and_push.sh
leptos-windowing-macro/: Cargo.toml
leptos-windowing/examples/: Cargo.toml
leptos-windowing/examples/basic_pagination/: Cargo.toml
leptos-windowing/examples/basic_tailwind/: Cargo.toml  README.md
leptos-windowing/examples/basic_tailwind/src/: main.rs
leptos-windowing/examples/basic_tailwind/style/: output.css
leptos-windowing/src/: cache.rs  hook.rs  item_state.rs  lib.rs  use_load_on_demand.rs  window.rs
leptos-windowing/src/loaders/: exact_loader.rs  loader.rs  mod.rs
leptos-windowing/src/pagination/: mod.rs  state.rs
leptos-windowing/src/pagination/components/: controls.rs  paginated_for.rs
leptos-windowing/src/pagination/hooks/: controls.rs  pagination.rs
leptos-windowing/src/traits/: mod.rs
leptos-windowing/src/traits/loaders/: exact_loader.rs  internal_loader.rs  loader.rs  memory_loader.rs  paginated_loader.rs
src/: cache.rs  lib.rs  window.rs
src/pagination/: state.rs
src/pagination/components/: controls.rs  mod.rs  paginated_for.rs
src/pagination/hooks/: controls.rs  pagination.rs
src/virtualization/: hook.rs
