[package]
name = "leptos-pagination"
version = "0.1.0"
edition = "2024"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming", "wasm"]
description = "Pagination for Leptos"
exclude = ["examples/", "tests/"]
keywords = ["leptos", "pagination", "virtualization", "cache", "loading"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-windowing"

[dependencies]
default-struct-builder = "0.5"
leptos = "0.8"
leptos-use = { version = "0.16", default-features = false, features = ["math"] }
leptos-windowing = { version = "0.1.0", path = "../leptos-windowing" }
reactive_stores = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
web-sys = "0.3"

[features]
ssr = ["leptos/ssr", "leptos-windowing/ssr", "leptos-use/ssr"]
