[package]
name = "leptos-pagination-examples"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["basic", "rest_api"]
exclude = ["serverfn_sqlx"]
resolver = "3"

[workspace.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
leptos = "0.8"
leptos-pagination = { path = ".." }
leptos-pagination-examples = { path = "." }
leptos-use = "0.16"
log = "0.4"

[dependencies]
leptos-use.workspace = true
