[package]
name = "rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
console_error_panic_hook.workspace = true
console_log.workspace = true
gloo-net = { version = "0.6", features = ["http"] }
leptos = { workspace = true, features = ["csr"] }
leptos-pagination.workspace = true
log.workspace = true
serde = { version = "1", features = ["derive"] }
