[package]
name = "basic_tailwind"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos-windowing.workspace = true
leptos-windowing-examples.workspace = true
log.workspace = true
